refactor(mobile): access definitivo solo en memoria; backend reutiliza JWT
Co-authored-by: Cursor <cursoragent@cursor.com>